fix message floating options overlap, are you happy now ciach0 :P

--- a/src/components/message-pane/message-item/styles.module.scss
+++ b/src/components/message-pane/message-item/styles.module.scss
@@ -15,7 +15,7 @@
 
 .floatOptions {
   position: absolute;
-  z-index: 1111111;
+  z-index: 1111;
   top: -18px;
   right: 10px;
   display: flex;
